Better fourier transform

--- a/krmathmacros.sty
+++ b/krmathmacros.sty
@@ -62,7 +62,9 @@
 \newcommand\Ohm\Omega
 
 % Fourier Transform
-\newcommand{\fourier}{\xrightarrow{\makebox[1.5em][c]{\(\mathcal{F}\)}}}
+\newcommand{\FT}{\xleftrightarrow{\makebox[1.5em][c]{\(\mathfrak{F}\)}}}
+\newcommand{\FFT}{\xrightarrow{\makebox[1.5em][c]{\(\mathfrak{F}\)}}}
+\newcommand{\IFT}{\xrightarrow{\makebox[1.5em][c]{\(\mathfrak{F}^{-1}\)}}}
 
 
 % Functions
