--- a/krmathmacros.sty
+++ b/krmathmacros.sty
@@ -26,7 +26,7 @@
 \newcommand{\answerbox}[2]{\begin{empheq}[box={\fboxsep=6pt\fbox}]{align}
     \label{#1}#2\end{empheq}}
 
-% Better loocking code font for variables/keywords. Requires package color
+% Better looking code font for variables/keywords. Requires package color
 % NOTE: NOT a verbatim environment
 \definecolor{light-gray}{gray}{0.95}
 \newcommand{\code}[1]{\colorbox{light-gray}{\texttt{#1}}}
@@ -34,7 +34,9 @@
 % Theorem styles
 \newtheorem{lemma}{Lemma}
 \newtheorem{corollary}{Corollary}
-\renewcommand{\qedsymbol}{$\blacksquare$}
+\renewcommand{\qedsymbol}{$\;_\blacksquare$}
+\newcommand{\qef}{\;_\triangle}
+\newcommand{\qefsymbol}{$\qef$}
 
 
 % Basic operator macros
@@ -100,12 +102,17 @@
 \newcommand*\bdot@[2]{\mathbin{\vcenter{\hbox{\scalebox{#2}{$\m@th#1\bullet$}}}}}
 \makeatother
 
+% Permutation and combination macros
+% First arg: k, optional second arg: n
+\newcommand\Perm[2][^n]{\prescript{#1\mkern-2.5mu}{}P_{#2}}
+\newcommand\Comb[2][^n]{\prescript{#1\mkern-0.5mu}{}C_{#2}}
+
 
 % Population parameters and sample statistics
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\Expec}[1]{\operatorname{\mathbb{E}}\left[#1\right]}
 \newcommand{\E}[1]{\Expec{#1}} % Short form
-\newcommand{\Prob}[1]{\operatorname{\mathbb{P}}\left(#1\right)}
+\newcommand{\Prob}[1]{\operatorname{\mathcal{P}}\left(#1\right)}
 \renewcommand{\P}[1]{\Prob{#1}} % Short form, overwrites \P for paragraph symbol
 \newcommand{\Var}[1]{\operatorname{\mathbb{V}}\left(#1\right)}
 \newcommand{\V}[1]{\Var{#1}} % Short form
