fix weird color warning

--- a/krmathmacros.sty
+++ b/krmathmacros.sty
@@ -13,7 +13,7 @@
 \RequirePackage{amsthm}
 \RequirePackage{empheq}
 \RequirePackage{dsfont}
-\RequirePackage{color}
+\RequirePackage{xcolor}
 \RequirePackage{tensor}
 % \RequirePackage{mathtools}
 
@@ -31,8 +31,8 @@
 
 % Better looking code font for variables/keywords. Requires package color
 % NOTE: NOT a verbatim environment
-\definecolor{light-gray}{gray}{0.95}
-\newcommand{\code}[1]{\colorbox{light-gray}{\texttt{#1}}}
+\definecolor{kr-light-gray}{gray}{0.95}
+\newcommand{\code}[1]{\colorbox{kr-light-gray}{\texttt{#1}}}
 
 % Theorem styles
 \newtheorem{lemma}{Lemma}
