change prob style

--- a/krmathmacros.sty
+++ b/krmathmacros.sty
@@ -127,7 +127,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\Expec}[1]{\operatorname{\mathbb{E}}\left[#1\right]}
 \newcommand{\E}[1]{\Expec{#1}} % Short form
-\newcommand{\Prob}[1]{\operatorname{\mathcal{P}}\left(#1\right)}
+\newcommand{\Prob}[1]{\operatorname{\mathbb{P}}\left(#1\right)}
 \renewcommand{\P}[1]{\Prob{#1}} % Short form, overwrites \P for paragraph symbol
 \newcommand{\Var}[1]{\operatorname{\mathbb{V}}\left(#1\right)}
 \newcommand{\V}[1]{\Var{#1}} % Short form
